tests/baselines/reference/genericTypeUsedWithoutTypeArguments3.errors.txt
==== tests/cases/compiler/genericTypeUsedWithoutTypeArguments3.ts (1 errors) ====
    interface Foo<T> { }
    interface Bar<T> extends Foo { }
                             ~~~
!!! genericTypeUsedWithoutTypeArguments3.ts(2,26): error TS2090: Generic type 'Foo<T>' requires 1 type argument(s).
    